<resources>
    <string name="app_name">AFL Monitoring</string>
    <string name="home">Home</string>
    <string name="admin_locations">Locations</string>
    <string name="admin_stats">Stats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="ongoing">Ongoing</string>
    <string name="ado">ADO</string>
    <string name="dda">DDA</string>
    <string name="admin">ADMIN</string>
    <string name="google_map_key">AIzaSyAUKi9N7ZNLUj3QjYK9Zn-7PxVMw85koOY</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="help">Help</string>
    <string name="advance_settings">Advance Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="profile_status">
        <item>Pending</item>
        <item>Ongoing</item>
        <item>Completed</item>
    </string-array>

</resources>