<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<!--    android:theme="@style/DrawerTheme"-->

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/privacy"
            android:icon="@drawable/lock"
            android:title="@string/privacy_policy"/>
        <item
            android:id="@+id/terms"
            android:icon="@drawable/assignment"
            android:title="@string/terms_amp_condition" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/help"
            android:title="@string/help" />
        <item
            android:id="@+id/advance_settings"
            android:title="@string/advance_settings" />
        <item
            android:id="@+id/logout_now"
            android:title="@string/logout" />
    </group>
</menu>


