<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_ado"
    app:startDestination="@+id/home_ado">

    <fragment
        android:id="@+id/home_ado"
        android:name="com.example.afl_monitoringandroidapp.adminTabs.adminHome"
        android:label="@string/home"
        tools:layout="@layout/fragment_admin_home" />

    <fragment
        android:id="@+id/pending_ado"
        android:name="com.example.afl_monitoringandroidapp.statusTabs.pending"
        android:label="@string/pending"
        tools:layout="@layout/fragment_pending" />

    <fragment
        android:id="@+id/completed_ado"
        android:name="com.example.afl_monitoringandroidapp.statusTabs.commonStatusTab"
        android:label="@string/completed"
        tools:layout="@layout/fragment_status_common" />

</navigation>